--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .sidebar {
     height: 100%;
-    width: 100px;
+    width: 70px;
     background: #353941;
     position: fixed;
     transition: 0.5s;
@@ -20,12 +20,12 @@ ul li {
 
 ul li a {
     display: block;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0;
 }
 
 ul li a i {
     background: #41464e;
-    margin-left: 20px;
+    margin-left: 15px;
     font-size: 16px;
     width: 35px;
     height: 35px;
@@ -92,7 +92,7 @@ ul .sidebar-divider {
 }
 
 .sidebar-header {
-    padding: 20px 20px 0 20px;
+    padding: 20px 20px 0 9px;
     overflow: hidden;
     margin-top: 80px;
     display: flex;
@@ -101,8 +101,8 @@ ul .sidebar-divider {
 
 .sidebar-header .user-pic {
     flex: 1 0 auto;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     overflow: hidden;
     display: inline-block;
 }
@@ -116,7 +116,7 @@ ul .sidebar-divider {
 
 .sidebar-header .user-info {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 25px;
 }
 
 .sidebar-header .user-info>span {
@@ -167,7 +167,7 @@ ul .sidebar-divider {
 
 .sidebar-footer>a i {
     font-size: 2rem;
-    margin-left: 35px;
+    margin-left: 15px;
 }
 
 .sidebar-footer>a {
