--- a/src/app/dashboard/location/location.component.html
+++ b/src/app/dashboard/location/location.component.html
@@ -9,7 +9,7 @@
 
                 <div class="row">
                     <div class="col-12 mb-4 mt-4">
-                        <div class="">
+                        <div class="" *ngIf="currentLoginUser?.access !== 'agent'">
                             <button class="btn btn-primary" routerLink="/add-location">Add New</button>
                         </div>
                         <br>
@@ -42,7 +42,7 @@
                                         <th scope="col">City</th>
                                         <th scope="col">Location</th>
                                         <th scope="col">Sub Locations</th>
-                                        <th scope="col">Operations</th>
+                                        <th scope="col" *ngIf="currentLoginUser?.access !== 'agent'">Operations</th>
         
                                     </tr>
                                 </thead>
@@ -64,7 +64,7 @@
                                         <ng-template #LocationBlock>
                                             {{'N/A'}}
                                         </ng-template>
-                                        <td><i class="fa fa-edit icon" (click)="setUser(location)"></i>
+                                        <td *ngIf="currentLoginUser?.access !== 'agent'"><i class="fa fa-edit icon" (click)="setUser(location)"></i>
                                             <a (click)="setUser(location)" role="button"></a>
         
                                             <i class="fa fa-trash icon" (click)="confirmID(location._id)" data-toggle="modal"
