--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -7,57 +7,54 @@
             <div class="container-fluid">
                 <h1 class="h3 mb-2 text-gray-800">Inventory Management</h1>
 
+                <div class="row mb-3 mt-5">
+                    <div class="col-12">
+                        <button class="btn btn-primary" (click)="setFormTitle('Inventory')">Add New</button>
+                    </div>
+                </div>
                 <div class="row">
-                    <div class="col-12 mb-4 mt-4">
-                        <div class="mb-3">
-                            <button class="btn btn-primary" (click)="setFormTitle('Inventory')">
-                                Add New
-                            </button>
-                        </div>                        
-                        <div class="row">
-                            <div class="col-3">
-                                <ng-select [items]="options" bindLabel="name" bindValue="value" class="mr-2 ml-2"
-                                    placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)"
-                                    [clearable]="false">
-                                </ng-select>
-                            </div>
-                            <div class="col-3">
-                                <input type="text" class="form-control ml-2" placeholder="Search {{ placeholder }}"
-                                    [(ngModel)]="refId" />
-                            </div>
-            
-                            <div class="">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city"
-                                            placeholder="Select City" (change)="changeCity($event)">
-                                        </ng-select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location"
-                                            bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
-                                        </ng-select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ml-5">
-                                <input type="date" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
-                            </div>
-                            <div class="ml-5">
-                                <input type="date" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
-                            </div>
-                            <div class="col-5">
-                                <button onclick="window.print()" class="btn btn-primary">
-                                    Print
-                                </button> &nbsp; &nbsp; &nbsp;<button (click)="exportTOExcel()" class="btn btn-primary">
-                                    Excel
-                                </button>
-                            </div>
-                        </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <ng-select [items]="options" bindLabel="name" bindValue="value"
+                            placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)"
+                            [clearable]="false">
+                        </ng-select>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <input type="text" class="form-control" placeholder="Search {{ placeholder }}"
+                            [(ngModel)]="refId" />
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city"
+                            placeholder="Select City" (change)="changeCity($event)">
+                        </ng-select>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location"
+                            bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
+                        </ng-select>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <input type="date" class="form-control" placeholder="Start Date"
+                            (change)="changeStartDate($event)">
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <input type="date" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <input type="number" class="form-control" placeholder="Min Demand" [(ngModel)]="minDemand">
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <input type="number" class="form-control" placeholder="Max Demand" [(ngModel)]="maxDemand">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="btn-container">
+                        <button onclick="window.print()" class="btn btn-primary">Print</button>
+                        <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">     
                         <div class="table-container mb-5 mt-4">
                             <table class="table table-hover">
                                 <thead>
@@ -79,7 +76,7 @@
             
                                 <tbody>
                                     <tr
-                                        *ngFor="let user of user | filterlist: selectedOption:refId | dateFilter: startDate:endDate | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
+                                        *ngFor="let user of user | filterlist: selectedOption:refId | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'"><img class="super-hot"
                                                     src="\assets\icons\super_hot.svg"></span>
@@ -124,13 +121,15 @@
                                                 </ng-template>
                                             </td>
                                         </ng-template>
-            
-                                        <td *ngIf="user?.demand_price == null else elseBlockDemand"><b>Max:</b> {{ user?.max_price |
-                                            currency :'Rs ' : 'symbol' : '1.0-0'}}<br><b>Min:</b> {{ user?.min_price | currency :'Rs
-                                            ' : 'symbol' : '1.0-0' }}</td>
+
+                                        <td *ngIf="user?.min_price != null && user.max_price != null else elseBlockDemand">
+                                            <b>Max:</b> {{ user.max_price | currency :'Rs ' : 'symbol' : '1.0-0' }}<br /><b>Min:</b> {{ user.min_price | currency :'Rs
+                                             ' : 'symbol' : '1.0-0' }}
+                                        </td>
                                         <ng-template #elseBlockDemand>
-                                            <td>{{ user?.demand_price | currency :'Rs ' : 'symbol' : '1.0-0'}}</td>
+                                            <td>{{ user.demand_price | currency :'Rs ' : 'symbol' : '1.0-0' }}</td>
                                         </ng-template>
+            
                                         <td>{{ user?.beds_number }}</td>
                                         <td>
             
