--- a/src/app/dashboard/leads/leads.component.css
+++ b/src/app/dashboard/leads/leads.component.css
@@ -7,10 +7,6 @@
     transition: 0.5s all;
 }
 
-.no-click {
-    pointer-events: none;
-}
-
 .table-container {
     overflow-x: scroll;
     box-shadow: 0px 0px 20px 5px rgba(200, 200, 200, 0.69);
@@ -34,13 +30,13 @@
     background-color: #e8e8e8;
 }
 
-.super-hot {
-    height: 20px;
-}
-
 .normal {
     height: 16px;
     margin-left: 3px;
+}
+
+.super-hot {
+    height: 20px;
 }
 
 .table th {
@@ -52,60 +48,97 @@
     color: white;
 }
 
-.leads {
+.abc {
+    overflow-x: hidden;
+}
+
+.dropbtn {
+    background-color: #38baa2;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.inventory {
     margin-left: 47px;
     margin-top: 120px;
+    width: 100%;
 }
 
 .fa {
-    margin-left: 8px;
-}
-
-.modal-header {
-    background-color: #38baa2;
-    color: white;
-    height: 61px;
+    margin-left: 10px;
 }
 
 .btn:not(:disabled):not(.disabled):hover {
     color: #fff;
     background-color: #1f6e97;
     border-color: #1f6e97;
-    margin-left: 7px;
-    /* border-radius: 7px; */
-}
-
-.modal-dialog {
-    margin-top: 105px;
-}
-
-.btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
-    color: white;
-    margin-left: 7px;
-    border-radius: 4px;
-}
-
-.modal-content {
-    height: 338px;
-    border-radius: 17px;
-}
-
-ng-select {
-    margin-left: 15px;
-}
-
-.icon {
-    margin-top: 14px;
 }
 
 .btn {
-    /* margin-left: 25px; */
     width: 100px;
     font-size: 14px;
     background-color: #38baa2;
     color: white;
     border: 1px solid transparent;
+}
+
+.btn-container {
+    margin-left: auto;
+    margin-right: 12px;
+}
+.btn-container button {
+    margin-left: 10px;
+}
+
+.form-control {
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 1.1rem 0.75rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+ng-select, .form-control {
+    font-size: 0.8rem;
+    font-weight: 400;
 }
 
 .form-control-borderless {
@@ -114,32 +147,32 @@ ng-select {
 }
 
 @media only screen and (max-width: 1650px) {
-    .leads {
+    .inventory {
         margin-left: 50px;
     }
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
-    .leads {
-        margin-left: 100px;
+    .inventory {
+        margin-left: 80px;
     }
 }
 
 @media only screen and (max-width: 1200px) {
-    .leads {
+    .inventory {
         margin-left: 100px;
-    }
-}
-
-@media only screen and (max-width: 1150px) {
-    .leads {
-        margin-left: 120px;
         overflow-x: auto;
     }
 }
 
+@media only screen and (max-width: 1100px) {
+    .inventory {
+        margin-left: 120px;
+    }
+}
+
 @media only screen and (max-width: 992px) {
-    .leads {
+    .inventory {
         margin-left: -80px;
     }
 }
