--- a/src/app/dashboard/location/add-location/add-location.component.css
+++ b/src/app/dashboard/location/add-location/add-location.component.css
@@ -190,8 +190,8 @@ i:before {
 .btn {
     /* / margin-top: 20px; /
     / margin-left: 40px; / */
-    width: 100px;
-    font-size: 14px;
+    /* width: 100px; */
+    /* font-size: 14px; */
     background-color: #38baa2;
     color: white;
     border: 1px solid transparent;
